<resources>
    <string name="app_name">Fair2Share</string>
    <string name="hint_login_email">email</string>
    <string name="btn_login">Login</string>
    <string name="txt_login_email">Email</string>
    <string name="txt_login_password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="btn_add">Add</string>
    <string name="profile_lbl_activities">Activities</string>
    <string name="fragment_activity_summary_title">Summary</string>
    <string name="fragment_activity_transactions_title">Transactions</string>
    <string name="fragment_profile_title">Profile</string>
    <string name="fragment_add_edit_activity_title">Activity</string>
    <string name="remove_activity">Remove Activity</string>
    <string name="fragment_create_activity_name_lbl">Name*</string>
    <string name="fragment_create_activity_name_placeholder">name</string>
    <string name="fragment_create_activity_description_lbl">Description</string>
    <string name="fragment_create_activity_description_placeholder">description</string>
    <string name="fragment_create_activity_valuta_lbl">Valuta*</string>
    <string name="fragment_create_transaction_title">Add Transaction</string>
    <string name="fragment_manage_people_in_activity">Activity Participants</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="friend_requests_title">Friend requests</string>
    <string name="friend_lst_title">Friends</string>
    <string name="no_friend_requests">You have no pending friend requests.</string>
    <string name="no_friends">You currently don\'t have any friends.</string>
    <string name="fragment_add_friend_title">Add Friend</string>

    <string name="btn_register">Register</string>
    <string name="txt_first_name">First Name*</string>
    <string name="hint_first_name">first name</string>
    <string name="txt_last_name">Last Name*</string>
    <string name="hint_last_name">last name</string>
    <string name="txt_email">Email*</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="btn_summary">Summary</string>
    <string name="btn_edit_activity">Edit Activity</string>
    <string name="btn_add_friends">Add Friends</string>
    <string name="img_nav_profile_description">Profile Image</string>
    <string name="rv_profile_activity_delete_button">Delete Button</string>
    <string name="btn_add_friend">Add Friend</string>
    <string name="btn_remove_friend">Remove Friend</string>
    <string name="btn_logout">Logout</string>
    <string name="title_participants">Participants</string>
    <string name="title_candidates">Candidates</string>
    <string name="btn_confirm">Confirm</string>
    <string name="no_participants">There are currently no participating members.</string>
    <string name="no_candidates">There are currently no candidates available.</string>
    <string name="txt_profile_noactivities">There are no available activities.</string>
    <string name="txt_activitytransactions_notransactions">There are no transactions yet.</string>
    <string name="btn_edit">Edit</string>
    <string name="add_edit_transaction_fragment_title">Transaction</string>
    <string name="txt_addedittransaction_payment">Payment*</string>
    <string name="hint_name">name</string>
    <string name="hint_payment">payment</string>
    <string name="txt_addedittransaction_paidby">Paid By*</string>
    <string name="remove_transaction">Remove Transaction</string>
    <string name="fragment_manage_people_in_transaction">Transaction Participants</string>
    <string name="fragment_login_fail">Password or email not correct!</string>
    <string name="fragment_addfriend_success">FriendRequest has been sent."</string>
    <string name="fragment_addfriend_errorsendyourself">"You can't send yourself a friend request."</string>
    <string name="fragment_addfriend_alreadpending">Something went wrong. Maybe you have a pending friend request from this email?</string>
    <string name="fragment_addfriend_emailnotfound">Email does not exist.</string>
    <string name="fragment_friendrequest_defaulterror">Something went wrong.</string>
    <string name="fragment_startup_tokenexipred">Token expired, please relog.</string>
    <string name="offline_error">You are offline, make sure you have an internet conncetion!</string>
    <string name="fair2share_logo">Fair2Share Logo</string>
    <string name="email_not_valid">Email is not valid!</string>
    <string name="passwords_not_equal">Password and confirm password have to be the same!</string>
    <string name="firtsname_not_valid">Firstname can only contain spaces and unicode characters!</string>
    <string name="lastname_not_valid">Lastname can only contain spaces and unicode characters!</string>
    <string name="password_not_valid">Password has to be minimum eight characters, at least one uppercase letter, one lowercase letter and one number</string>
    <string name="name_not_valid">Name has to be at least 3 characters long.</string>
    <string name="transaction_payment_not_valid">Transaction payment amount cannot be negative!</string>
    <string name="no_valuta_found">Selected valuta does not exist!</string>
</resources>
