<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtLabelLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/txt_first_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:ems="10"
                        android:hint="@string/hint_first_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toStartOf="@+id/editFirstName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLabelFirstName" />

                    <TextView
                        android:id="@+id/txtLabelFirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/txt_last_name"
                        app:layout_constraintStart_toStartOf="@+id/editFirstName"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:ems="10"
                        android:hint="@string/hint_last_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLabelFirstName" />

                    <TextView
                        android:id="@+id/txtLabelEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/txt_email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:ems="10"
                        android:hint="@string/hint_login_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLabelEmail" />

                    <TextView
                        android:id="@+id/txtLabelPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/txt_login_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:ems="10"
                        android:hint="@string/hint_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toStartOf="@+id/editConfirmPassword"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtLabelPassword" />

                    <EditText
                        android:id="@+id/editConfirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:ems="10"
                        android:hint="@string/hint_confirm_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.4"
                        app:layout_constraintStart_toEndOf="@+id/editPassword"
                        app:layout_constraintTop_toBottomOf="@+id/txtLabelPassword" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/btn_register"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
