<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/fragmentProfile">

    <fragment
        android:id="@+id/fragmentProfile"
        android:name="com.example.fair2share.profile.ProfileFragment"
        android:label="@string/fragment_profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_fragmentProfile_to_createActivityFragment"
            app:destination="@id/createActivityFragment" />
        <action
            android:id="@+id/action_fragmentProfile_to_friendListFragment"
            app:destination="@id/friendListFragment" />
        <action
            android:id="@+id/action_fragmentProfile_to_activityTransactionsFragment"
            app:destination="@id/activityTransactionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/createActivityFragment"
        android:name="com.example.fair2share.activity.CreateActivityFragment"
        android:label="@string/fragment_create_activity_title"
        tools:layout="@layout/fragment_createactivity" />
    <fragment
        android:id="@+id/friendListFragment"
        android:name="com.example.fair2share.friends.FriendListFragment"
        android:label="@string/friend_lst_title"
        tools:layout="@layout/fragment_friendlist">
        <action
            android:id="@+id/action_friendListFragment_to_addFriendFragment"
            app:destination="@id/addFriendFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFriendFragment"
        android:name="com.example.fair2share.friends.AddFriendFragment"
        android:label="@string/fragment_add_friend_title"
        tools:layout="@layout/fragment_addfriend" />
    <fragment
        android:id="@+id/activityTransactionsFragment"
        android:name="com.example.fair2share.activity.transactions.ActivityTransactionsFragment"
        android:label="fragment_activity_transactions"
        tools:layout="@layout/fragment_activitytransactions">
        <action
            android:id="@+id/action_activityTransactionsFragment_to_activitySummaryFragment"
            app:destination="@id/activitySummaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/activitySummaryFragment"
        android:name="com.example.fair2share.activity.summary.ActivitySummaryFragment"
        android:label="ActivitySummaryFragment">
        <action
            android:id="@+id/action_activitySummaryFragment_to_managePeopleInActivityFragment"
            app:destination="@id/managePeopleInActivityFragment" />
    </fragment>
    <fragment
        android:id="@+id/managePeopleInActivityFragment"
        android:name="com.example.fair2share.activity.people.ManagePeopleInActivityFragment"
        android:label="@string/fragment_manage_people_in_activity"
        tools:layout="@layout/fragment_managepeopleinactivity" />
</navigation>